improved tree view aesthetic

--- a/src/MicroMikeMinimal/editorText.sass
+++ b/src/MicroMikeMinimal/editorText.sass
@@ -1,26 +1,27 @@
 @use 'std'
-body:not(.disableSimpleEditor)
-     --h1-line-height: var(--line-height-normal)
-     --h2-line-height: var(--line-height-normal)
-     --h3-line-height: var(--line-height-normal)
-     --h4-line-height: var(--line-height-normal)
-     --h1-size: 1em
-     --h2-size: 1em
-     --h3-size: 1em
-     --h4-size: 1em
-     --h5-size: 1em
-     --h6-size: 1em
-     --p-spacing: 0px
+body:not(.disableSimpleEditor) 
+    :is(.markdown-rendered:not(.community-modal-readme), .cm-scroller)
+        --h1-line-height: var(--line-height-normal)
+        --h2-line-height: var(--line-height-normal)
+        --h3-line-height: var(--line-height-normal)
+        --h4-line-height: var(--line-height-normal)
+        --h1-size: 1em
+        --h2-size: 1em
+        --h3-size: 1em
+        --h4-size: 1em
+        --h5-size: 1em
+        --h6-size: 1em
+        --p-spacing: 0px
 
-     --lineMultiplier: 1.25
+        --lineMultiplier: 1.25
 
-     --line-height-normal: calc(1em * var(--lineMultiplier))
-     --margin-scale: calc(var(--font-text-size) * var(--lineMultiplier))
+        --line-height-normal: calc(1em * var(--lineMultiplier))
+        --margin-scale: calc(var(--font-text-size) * var(--lineMultiplier))
 
-     --anp-font-preview-wt: 200
-     --anp-font-editor-wt: 200
+        --anp-font-preview-wt: 200
+        --anp-font-editor-wt: 200
 
-     --list-spacing: 0px
+        --list-spacing: 0px
 
 .workspace-split.mod-root .view-content
     background-color: var(--bottom)
@@ -31,38 +32,41 @@ body:not(.disableSimpleEditor)
     margin-right: auto
 
 body:not(.disableSimpleEditor)
-    .markdown-rendered div:is(.el-p,.el-pre,.el-table,.el-ul,.el-ol) + div > :is(h1,h2,h3,h4,h5,h6),
-    .markdown-rendered :is(p,pre,table,ul,ol) + :is(h1,h2,h3,h4,h5,h6), 
-    .markdown-rendered .markdown-preview-section :is(p,h1,h2,h3,h4,h5,h6)
-        margin-top: var(--margin-scale) // calc(var(--font-text-size) * var(--line-height-normal))
+    .markdown-rendered:not(.community-modal-readme)
+        div:is(.el-p,.el-pre,.el-table,.el-ul,.el-ol) + div > :is(h1,h2,h3,h4,h5,h6),
+        :is(p,pre,table,ul,ol) + :is(h1,h2,h3,h4,h5,h6), 
+        .markdown-preview-section :is(p,h1,h2,h3,h4,h5,h6)
+            margin-top: var(--margin-scale) // calc(var(--font-text-size) * var(--line-height-normal))
 
-    .markdown-rendered .markdown-preview-section blockquote :is(p,h1,h2,h3,h4,h5,h6):first-of-type
-        margin-top: 0
+        .markdown-preview-section blockquote :is(p,h1,h2,h3,h4,h5,h6):first-of-type
+            margin-top: 0
 
-    .markdown-rendered .markdown-preview-section :is(h1,h2,h3,h4,h5,h6)
-        margin-bottom: var(--margin-scale)
+        .markdown-preview-section :is(h1,h2,h3,h4,h5,h6)
+            margin-bottom: var(--margin-scale)
 
-    .markdown-rendered .markdown-preview-section :is(h1,h2,h3,h4,h5,h6)+div p
-        margin-top: 0
+        .markdown-preview-section :is(h1,h2,h3,h4,h5,h6)+div p
+            margin-top: 0
 
-    .markdown-rendered .markdown-preview-section .mod-header+ div :is(p,h1,h2,h3,h4,h5,h6)
-        margin-top: 0
+        .markdown-preview-section .mod-header+ div :is(p,h1,h2,h3,h4,h5,h6)
+            margin-top: 0
 
-    .markdown-rendered div:is(.el-ul,.el-ol)
-        margin-top: var(--margin-scale)
+        div:is(.el-ul,.el-ol)
+            margin-top: var(--margin-scale)
 
-    .markdown-rendered hr
-        margin-top: calc(var(--margin-scale) * 1.5)
-        height: calc(var(--margin-scale) * 0.5)
-        margin-bottom: 0px
+        hr
+            margin-top: calc(var(--margin-scale) * 1.5)
+            height: calc(var(--margin-scale) * 0.5)
+            margin-bottom: 0px
+
+        .footnote-ref
+            vertical-align: text-bottom
 
     .markdown-source-view.mod-cm6 .cm-line.HyperMD-codeblock
         padding-left: 5px
 
-    .footnote-ref
-        vertical-align: text-bottom
+    
 
-body:not(.disableSECodeblock):not(.disableSimpleEditor) .markdown-rendered pre
+body:not(.disableSECodeblock):not(.disableSimpleEditor) .markdown-rendered:not(.community-modal-readme) pre
     padding: 0px
     margin: 0px
     padding-left: 5px
@@ -72,11 +76,11 @@ body:not(.disableSECodeblock):not(.disableSimpleEditor) .markdown-rendered pre
     margin-top: var(--margin-scale)
     margin-bottom: var(--margin-scale)
 
-body:not(.disableSECodeblock):not(.disableSimpleEditor) .markdown-rendered pre:before
+body:not(.disableSECodeblock):not(.disableSimpleEditor) .markdown-rendered:not(.community-modal-readme) pre:before
     content: "```"
     display: block
 
-body:not(.disableSECodeblock):not(.disableSimpleEditor) .markdown-rendered pre:after
+body:not(.disableSECodeblock):not(.disableSimpleEditor) .markdown-rendered:not(.community-modal-readme) pre:after
     content: "```"
     display: block
 
@@ -87,5 +91,5 @@ body:not(.disableSECallout):not(.disableSimpleEditor) .callout
     margin-top: var(--margin-scale)
     margin-bottom: var(--margin-scale)
 
-body:not(.disableSECallout):not(.disableSimpleEditor) .markdown-rendered .markdown-preview-section :is(.callout-content) > *:first-of-type
+body:not(.disableSECallout):not(.disableSimpleEditor) .markdown-rendered:not(.community-modal-readme) .markdown-preview-section :is(.callout-content) > *:first-of-type
     margin-top: 0px
