--- a/src/MicroMikeMinimal/index.sass
+++ b/src/MicroMikeMinimal/index.sass
@@ -12,14 +12,14 @@
 @use "cPreventVisCulling.sass"
 @use "cSidebarView.sass"
 @use "cNoAnimations.sass"
-@use "cNoAnimations_displayPopFix1.sass"
+//@use "cNoAnimations_displayPopFix1.sass"
 @use "dropdownBlender.sass"
 @use "editorDashboard.sass"
 @use "editorText.sass"
 @use "editorText-lineLength.sass"
 @use "editorView.sass"
 @use "fileBrowser.sass"
-//@use "fileBrowser-copy.sass"
+//@use "fileBrowser2.sass"
 @use "miniMode.sass"
 @use "outline.sass"
 @use "prompt.sass"
