--- a/src/MicroMikeMinimal/settings.sass
+++ b/src/MicroMikeMinimal/settings.sass
@@ -22,10 +22,16 @@ body:not(.is-mobile) .modal.mod-settings
 body:not(.is-mobile).setting-item-control div[aria-label="Open themes folder"] + .dropdown
 	width: 160px
 
-body:not(.is-mobile).largeSettingsButtons .modal.mod-settings .clickable-icon
-	background-color: var(--level1_a)
-	min-height: 40px
-	width: 40px
+body:not(.is-mobile).largeSettingsButtons 
+	--toggle-thumb-radius: 4px
+	--toggle-thumb-height: 36px
+	--toggle-thumb-width: 36px
+	--toggle-width: 80px
+	--toggle-radius: 4px
+	.modal.mod-settings .clickable-icon
+		background-color: var(--level1_a)
+		min-height: 40px
+		width: 40px
 
 .mod-dim .modal-bg
 	opacity: 0 !important
