--- a/src/MicroMikeMinimal/statusBar.sass
+++ b/src/MicroMikeMinimal/statusBar.sass
@@ -5,6 +5,7 @@ body
 
 .status-bar
 	@include std.noPadding
+	min-height: 30px
 	.status-bar-item
 		@include std.noPadding
 		padding-left: 5px
@@ -15,4 +16,4 @@ body
 			margin-left: auto
 			margin-right: auto
 	.status-bar-item.left-region
-		padding-left:0px
+		padding-left: 0px
