--- a/src/theme.sass
+++ b/src/theme.sass
@@ -1,5 +1,5 @@
 //@use "Anappuccin/theme.css"
-@use "MicroMikeMinimal/index.sass"
+@use "MicroMikeMinimal/index.sass" // <- perf
 @use "Win7Layer/index2.sass"
 @use "MMStyler/index3.sass"
 @use "DTM08/index4.sass"
