--- a/src/MicroMikeMinimal/cNoAnimations_displayPopFix1.sass
+++ b/src/MicroMikeMinimal/cNoAnimations_displayPopFix1.sass
@@ -1,2 +1,2 @@
-.workspace-leaf-content
-	animation: 0.03s fade cubic-bezier(0.25, 0.46, 0.45, 0.94) !important
+.workspace
+	transition: padding-left 100ms ease-in !important
