--- a/src/MicroMikeMinimal/_stylesettings.scss
+++ b/src/MicroMikeMinimal/_stylesettings.scss
@@ -26,6 +26,7 @@ settings:
 			- accentMicroMike
 			- classicMicroMike
 			- dtm08
+			- factorio
 	-
 		id: disableBevels
 		title: Disable Bevels 
