--- a/src/MicroMikeMinimal/backlinksTop.sass
+++ b/src/MicroMikeMinimal/backlinksTop.sass
@@ -1,7 +1,7 @@
 @use 'std'
 // New TopLinks ႟
 
-:not(.disableToplinks) :is(.markdown-reading-view, .markdown-source-view) :is(.markdown-preview-sizer, .cm-sizer)
+body:not(.disableToplinks) :is(.markdown-reading-view, .markdown-source-view) :is(.markdown-preview-sizer, .cm-sizer)
 	display: flex
 	flex-direction: column
 	:is(.embedded-backlinks, .mod-footer)
