--- a/src/DTM08/modalPrompt.scss
+++ b/src/DTM08/modalPrompt.scss
@@ -5,9 +5,9 @@
 .modal-container .prompt
 {
 	background: linear-gradient(#3F434BDD, #202329DD);
-    backdrop-filter: blur(8px);
+    //backdrop-filter: blur(8px);
     border: solid 1px #000;
-    box-shadow: inset 0 0 0 1px #fff2, 0 2px 10px 5px #000b;
+    //box-shadow: inset 0 0 0 1px #fff2, 0 2px 10px 5px #000b;
     .prompt-input
     {
         background: linear-gradient(var(--d8dD) 0%, var(--d8dC) 50%, var(--d8dB) 50%, var(--d8dA) 100%);
