--- a/src/sNoAnimations.scss
+++ b/src/sNoAnimations.scss
@@ -1,8 +1,9 @@
 /* 
 	No Animations
-	This snippet disables animations. It includes a feature to workaround a problem causing the sidebars to close more slowly, and a fix for issues with the file browser display.
+	This snippet disables animations. It includes a feature to workaround a problem causing the sidebars to close more slowly.
+	This is borrowed from https://github.com/SMUsamaShah/Obsidian-Win98-Edition
 */
 @use "Snippets/aPreamble.scss";
 @use "MicroMikeMinimal/cNoAnimations.sass";
 @use "MicroMikeMinimal/sidebarFastClose.sass";
-@use "MicroMikeMinimal/cNoAnimations_displayPopFix1.sass";
+//@use "MicroMikeMinimal/cNoAnimations_displayPopFix1.sass";
