--- a/src/sTopBacklinks.scss
+++ b/src/sTopBacklinks.scss
@@ -1,6 +1,6 @@
 /* 
 	Top Backlinks
-	Toplinks (I.E. LYT/Ideaverse) are obnoxious to manually maintain. This snippet turns the backlinks's panel at the bottom into an autommatic "Toplinks" section.
+	Toplinks (I.E. LYT/Ideaverse) are obnoxious to manually maintain. This snippet turns the backlinks's optional panel at the bottom into an automatic "Toplinks" section.
 	To adjust the characters before/after toplinks, go to the bottom.
 */
 @use "Snippets/aPreamble.scss";
