--- a/Snippets/sNoAnimations.css
+++ b/Snippets/sNoAnimations.css
@@ -1,11 +1,12 @@
 /* 
 	No Animations
-	This snippet disables animations. It includes a feature to workaround a problem causing the sidebars to close more slowly, and a fix for issues with the file browser display.
+	This snippet disables animations. It includes a feature to workaround a problem causing the sidebars to close more slowly.
+	This is borrowed from https://github.com/SMUsamaShah/Obsidian-Win98-Edition
 */
 /*
 	Author: ThisTheThe
 	Source: github.com/ThisTheThe/MicroMike
-	Version: 03/11/2025
+	Version: 03/30/2025
 	This is a componentized version of a portion of Micro Mike. 
 	If you like what you see here, you might like the theme.
 
@@ -27,8 +28,4 @@ body:not(.disableFastClose) .workspace-split.mod-horizontal.mod-left-split.is-si
 
 body:not(.disableFastClose) .workspace-split.mod-horizontal.mod-right-split.is-sidedock-collapsed {
   display: none !important;
-}
-
-.workspace {
-  transition: padding-left 100ms ease-in !important;
 }/*# sourceMappingURL=sNoAnimations.css.map */
