--- a/Snippets/sSimpleEditor.css
+++ b/Snippets/sSimpleEditor.css
@@ -1,11 +1,12 @@
 /* 
 	Simple Editor
 	This snippet enforces a uniform line-height in the editor, no matter what. I find this "pseudo notepad" environment preferable to the more chaotic, jerky formatting shifts that occur switching between modes otherwise.
+	Due to fundamental HTML layout differences, I have to enforce a particular "pretty" note formatting style for this consistency.
 */
 /*
 	Author: ThisTheThe
 	Source: github.com/ThisTheThe/MicroMike
-	Version: 03/11/2025
+	Version: 03/30/2025
 	This is a componentized version of a portion of Micro Mike. 
 	If you like what you see here, you might like the theme.
 
