--- a/Snippets/sTopBacklinks.css
+++ b/Snippets/sTopBacklinks.css
@@ -1,13 +1,13 @@
 @charset "UTF-8";
 /* 
 	Top Backlinks
-	Toplinks (I.E. LYT/Ideaverse) are obnoxious to manually maintain. This snippet turns the backlinks's panel at the bottom into an autommatic "Toplinks" section.
+	Toplinks (I.E. LYT/Ideaverse) are obnoxious to manually maintain. This snippet turns the backlinks's optional panel at the bottom into an automatic "Toplinks" section.
 	To adjust the characters before/after toplinks, go to the bottom.
 */
 /*
 	Author: ThisTheThe
 	Source: github.com/ThisTheThe/MicroMike
-	Version: 03/11/2025
+	Version: 03/30/2025
 	This is a componentized version of a portion of Micro Mike. 
 	If you like what you see here, you might like the theme.
 
