--- a/src/sNearerTotalNumbers.scss
+++ b/src/sNearerTotalNumbers.scss
@@ -1,7 +1,7 @@
 /* 
 	Nearer Total Numbers
 	This modifies how the number in the search, tags, backlinks/outlinks, etc works. 
-	It moves it to the left	alongside the text, which makes it easier and less ambiguous which number belongs to which word.
+	It moves it to the left	alongside the text, which makes it easier and less ambiguous which number belongs to which entry.
 */
 @use "Snippets/aPreamble.scss";
 @use "MicroMikeMinimal/cTreeView-tagRightAlign.sass";
