--- a/src/sSimpleEditor.scss
+++ b/src/sSimpleEditor.scss
@@ -1,6 +1,7 @@
 /* 
 	Simple Editor
-	This snippet enforces a uniform line-height in the editor, no matter what. I find this "pseudo notepad" environment preferable to the more chaotic, jerky formatting shifts that occur switching between modes otherwise.
+	This snippet enforces a uniform line-height in the preview + editor, no matter what. I find this "pseudo notepad" environment preferable to the more chaotic, jerky formatting shifts that occur switching between modes otherwise.
+	Due to fundamental HTML layout differences, I have to enforce a particular "pretty" note formatting style for this consistency.
 */
 @use "Snippets/aPreamble.scss";
 @use "Snippets/s_simpleEditor.scss";
