Fix reported issues.

--- a/src/MicroMikeMinimal/dropdownBlender.sass
+++ b/src/MicroMikeMinimal/dropdownBlender.sass
@@ -17,6 +17,8 @@
 			color: #000
 			svg
 				color: #000
+		.menu-item-icon.mod-checked
+			bottom: 0px
 	.menu-separator
 		position: relative
 		width: 200%
