--- a/src/MicroMikeMinimal/index.sass
+++ b/src/MicroMikeMinimal/index.sass
@@ -13,6 +13,7 @@
 @use "cSidebarView.sass"
 @use "cNoAnimations.sass"
 //@use "cNoAnimations_displayPopFix1.sass"
+@use "dropDown.sass"
 @use "dropdownBlender.sass"
 @use "editorDashboard.sass"
 @use "editorText.sass"
