--- a/src/MicroMikeMinimal/statusBar.sass
+++ b/src/MicroMikeMinimal/statusBar.sass
@@ -15,5 +15,9 @@ body
 		> :is(span,svg)
 			margin-left: auto
 			margin-right: auto
+		.status-bar-item-segment:not(:last-of-type)
+			padding-right: 5px
 	.status-bar-item.left-region
 		padding-left: 0px
+
+		/* testing7 */
