--- a/src/MicroMikeMinimal/plugin/index.sass
+++ b/src/MicroMikeMinimal/plugin/index.sass
@@ -3,4 +3,5 @@
 @use "fileTreeAlternate.sass"
 @use "quietOutline.sass"
 @use "recentFiles.sass"
+@use "screenGarden.sass"
 @use "styleSettings.sass"
