--- a/src/DTM08/backgrounds.scss
+++ b/src/DTM08/backgrounds.scss
@@ -17,7 +17,8 @@
 .mod-top-right-space,
 .mod-top
 {
-	background: var(--bgGradient2);
+	background: linear-gradient(var(--d8dA), var(--d8dD) 50%, var(--d8dE) 50%, var(--d8dF));
+    box-shadow: inset 0 1px #fff2, inset 0 2px #fff1;
 }
 /* This needs to be variabled before it goes to public 
 .titlebar-inner
