--- a/src/MicroMikeMinimal/index.sass
+++ b/src/MicroMikeMinimal/index.sass
@@ -20,6 +20,7 @@
 @use "editorText-lineLength.sass"
 @use "editorView.sass"
 @use "fileBrowser.sass"
+@use "fileBrowser_noCulling.sass"
 //@use "fileBrowser2.sass"
 @use "miniMode.sass"
 @use "outline.sass"
@@ -37,6 +38,7 @@
 @use "sidebarButtonRight-base.sass"
 @use "sidebarButtonRight-alignment.sass"
 @use "sidebarButtonLeft-ribbonOff.sass"
+//@use "sidebarButtonLeft-tabBarAlign.sass"
 @use "sidebarFastClose.sass"
 @use "sidebarTabs.sass"
 @use "sidebarRightMinWidth.sass"
@@ -47,5 +49,6 @@
 @use "tabsStacked.sass"
 @use "tagView.sass"
 @use "titleBar.sass"
+@use "xt_checkboxes.scss"
 @use "vaultSwitcher.sass"
 @use "plugin/index.sass"
