--- a/theme.css
+++ b/theme.css
@@ -2527,7 +2527,7 @@ body:not(.pane-relief-disable-counts) .view-header-nav-buttons :is(button.clicka
   padding-right: 5px;
 }
 
-.w-3.h-3 {
+.w-3.h-3.rounded-full.bg-brand {
   height: 0.75rem !important;
 }
 
